[package]
name = "asteria-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
async-graphql = "7.0.17"
async-graphql-rocket = "7.0.17"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "bigdecimal"] }
num-traits = "0.2"
dotenv = "0.15"
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
