[package]
name = "asteria-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
async-graphql = "7.0.17"
async-graphql-rocket = "7.0.17"
dotenv = "0.15"
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
hex = "0.4.3"
blockfrost = "1.2.1"
blockfrost-openapi = "0.1.83"
pallas = { version = "1.0.0-alpha.4", features = ["hardano", "phase2", "unstable"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
